# PaperBanana-Pro

./: .gitignore  AGENTS.md  README.md  cli.py  demo.py  index.html  main.py  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.github/workflows-disabled/: publish-pypi.yml.disabled
agents/: base_agent.py  critic_agent.py  planner_agent.py  polish_agent.py  retriever_agent.py  vanilla_agent.py  visualizer_agent.py
configs/: model_config.template.yaml
docs/: agent-memory.md  optimization-backlog.md
scripts/: live_smoke_test.py
tests/: __init__.py  test_base_agent.py  test_cli_checkpoint.py  test_concurrency.py  test_dataset_paths.py  test_demo_preflight.py  test_demo_task_utils.py  test_demo_workbench_state.py  test_dependency_metadata.py  test_exp_config.py  test_generation_background.py  test_generation_utils_retry.py  test_generation_utils_runtime.py  test_log_config.py  test_paperviz_processor.py  test_pipeline_registry.py  test_pipeline_state.py  test_plot_executor.py  test_provider_connections.py  test_refine_background.py  test_retriever_agent.py  test_run_report.py  test_runtime_settings.py
utils/: cli_checkpoint.py  concurrency.py  config.py  config_loader.py  demo_job_store.py  demo_task_utils.py  generation_utils.py  image_generation_options.py  image_utils.py  log_config.py  paperviz_processor.py  pipeline_registry.py  pipeline_state.py  plot_executor.py  provider_connections.py  result_paths.py  run_report.py  runtime_events.py  runtime_settings.py
visualize/: show_pipeline_evolution.py  show_referenced_eval.py
